Fix broken CSS

--- a/src/js/components/molecule/Toast/index.module.scss
+++ b/src/js/components/molecule/Toast/index.module.scss
@@ -22,7 +22,7 @@ $cornerSize: 1em;
   a {
     cursor: pointer;
     text-decoration: none;
-    transition-property: ($transitionDuration * 0.5) opacity;
+    transition: ($transitionDuration * 0.5) opacity;
 
     &,
     &:hover,
